[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Levels/Level.gd" type="Script" id=3]
[ext_resource path="res://Sprites/ARCADE_N.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/White.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 122, 54 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8362, 136 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Level" type="Node2D"]
script = ExtResource( 3 )

[node name="BlackMap" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.438833, 0.09, 1, 1 )
tile_data = PoolIntArray( -1376189, 0, 0, -1376188, 1, 0, -1376187, 2, 0, -1310653, 3, 0, -1310652, 4, 0, -1310651, 5, 0, -1245117, 3, 0, -1245116, 4, 0, -1245115, 5, 0, -1179581, 3, 0, -1179580, 4, 0, -1179579, 5, 0, -1114045, 3, 0, -1114044, 4, 0, -1114043, 5, 0, -1048509, 3, 0, -1048508, 4, 0, -1048507, 5, 0, -982973, 3, 0, -982972, 4, 0, -982971, 5, 0, -917437, 3, 0, -917436, 4, 0, -917435, 5, 0, -851901, 3, 0, -851900, 4, 0, -851899, 5, 0, -786365, 3, 0, -786364, 4, 0, -786363, 5, 0, -720829, 3, 0, -720828, 4, 0, -720827, 5, 0, -655293, 3, 0, -655292, 4, 0, -655291, 5, 0, -589757, 3, 0, -589756, 4, 0, -589755, 5, 0, -524221, 3, 0, -524220, 4, 0, -524219, 5, 0, -458685, 3, 0, -458684, 4, 0, -458683, 5, 0, -393149, 3, 0, -393148, 4, 0, -393147, 5, 0, -327613, 3, 0, -327612, 4, 0, -327611, 5, 0, -262077, 3, 0, -262076, 4, 0, -262075, 5, 0, -196541, 3, 0, -196540, 4, 0, -196539, 5, 0, -131005, 3, 0, -131004, 4, 0, -131003, 5, 0, -65469, 3, 0, -65468, 4, 0, -65467, 5, 0, 67, 3, 0, 68, 4, 0, 69, 5, 0, 65603, 3, 0, 65604, 4, 0, 65605, 5, 0, 131139, 3, 0, 131140, 4, 0, 131141, 5, 0, 196675, 3, 0, 196676, 4, 0, 196677, 5, 0, 262211, 3, 0, 262212, 4, 0, 262213, 5, 0, 327747, 3, 0, 327748, 4, 0, 327749, 5, 0, 393283, 3, 0, 393284, 4, 0, 393285, 5, 0, 458819, 3, 0, 458820, 4, 0, 458821, 5, 0, 524355, 3, 0, 524356, 4, 0, 524357, 5, 0, 589891, 3, 0, 589892, 4, 0, 589893, 5, 0, 655390, 0, 0, 655391, 1, 0, 655392, 1, 0, 655393, 1, 0, 655394, 1, 0, 655395, 1, 0, 655396, 1, 0, 655397, 1, 0, 655398, 1, 0, 655399, 1, 0, 655400, 1, 0, 655401, 1, 0, 655402, 1, 0, 655403, 1, 0, 655404, 1, 0, 655405, 1, 0, 655406, 1, 0, 655407, 1, 0, 655408, 1, 0, 655409, 1, 0, 655410, 1, 0, 655411, 1, 0, 655412, 1, 0, 655413, 1, 0, 655414, 1, 0, 655415, 1, 0, 655416, 1, 0, 655417, 1, 0, 655418, 1, 0, 655419, 1, 0, 655420, 1, 0, 655421, 1, 0, 655422, 1, 0, 655423, 1, 0, 655424, 1, 0, 655425, 1, 0, 655426, 1, 0, 655427, 18, 0, 655428, 4, 0, 655429, 5, 0, 720926, 3, 0, 720927, 4, 0, 720928, 4, 0, 720929, 4, 0, 720930, 4, 0, 720931, 4, 0, 720932, 4, 0, 720933, 4, 0, 720934, 4, 0, 720935, 4, 0, 720936, 4, 0, 720937, 4, 0, 720938, 4, 0, 720939, 4, 0, 720940, 4, 0, 720941, 4, 0, 720942, 4, 0, 720943, 4, 0, 720944, 4, 0, 720945, 4, 0, 720946, 4, 0, 720947, 4, 0, 720948, 4, 0, 720949, 4, 0, 720950, 4, 0, 720951, 4, 0, 720952, 4, 0, 720953, 4, 0, 720954, 4, 0, 720955, 4, 0, 720956, 4, 0, 720957, 4, 0, 720958, 4, 0, 720959, 4, 0, 720960, 4, 0, 720961, 4, 0, 720962, 4, 0, 720963, 4, 0, 720964, 4, 0, 720965, 5, 0, 786462, 6, 0, 786463, 7, 0, 786464, 7, 0, 786465, 7, 0, 786466, 7, 0, 786467, 7, 0, 786468, 7, 0, 786469, 7, 0, 786470, 7, 0, 786471, 7, 0, 786472, 7, 0, 786473, 7, 0, 786474, 7, 0, 786475, 7, 0, 786476, 7, 0, 786477, 7, 0, 786478, 7, 0, 786479, 7, 0, 786480, 7, 0, 786481, 7, 0, 786482, 7, 0, 786483, 7, 0, 786484, 7, 0, 786485, 7, 0, 786486, 7, 0, 786487, 7, 0, 786488, 7, 0, 786489, 7, 0, 786490, 7, 0, 786491, 7, 0, 786492, 7, 0, 786493, 7, 0, 786494, 7, 0, 786495, 7, 0, 786496, 7, 0, 786497, 7, 0, 786498, 7, 0, 786499, 7, 0, 786500, 7, 0, 786501, 8, 0 )

[node name="WhiteMap" parent="." instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 2
tile_data = PoolIntArray( 35, 1, 0, 36, 1, 0, 37, 1, 0, 38, 1, 0, 39, 1, 0, 40, 1, 0, 41, 1, 0, 42, 1, 0, 43, 1, 0, 44, 1, 0, 45, 1, 0, 46, 1, 0, 47, 1, 0, 48, 1, 0, 49, 1, 0, 50, 1, 0, 51, 1, 0, 52, 2, 0, 65571, 7, 0, 65572, 7, 0, 65573, 7, 0, 65574, 7, 0, 65575, 7, 0, 65576, 7, 0, 65577, 7, 0, 65578, 7, 0, 65579, 7, 0, 65580, 7, 0, 65581, 7, 0, 65582, 7, 0, 65583, 7, 0, 65584, 7, 0, 65585, 7, 0, 65586, 7, 0, 65587, 7, 0, 65588, 8, 0 )

[node name="GrayMap" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.5745, 0.31, 1, 1 )
position = Vector2( 2, 0 )
collision_layer = 3
collision_mask = 3
tile_data = PoolIntArray( -9, 19, 0, -8, 19, 0, -7, 19, 0, -6, 19, 0, -5, 19, 0, -4, 19, 0, -3, 19, 0, -2, 19, 0, -1, 19, 0, -65536, 19, 0, -65535, 19, 0, -65534, 19, 0, -65533, 19, 0, -65532, 19, 0, -65531, 19, 0, -65530, 19, 0, -65529, 19, 0, -65528, 19, 0, 65527, 20, 0, 65528, 21, 0, 65529, 21, 0, 65530, 21, 0, 65531, 21, 0, 65532, 21, 0, 65533, 21, 0, 65534, 21, 0, 65535, 21, 0, 0, 21, 0, 1, 21, 0, 2, 21, 0, 3, 21, 0, 4, 21, 0, 5, 21, 0, 6, 21, 0, 7, 21, 0, 8, 21, 0, 9, 21, 0, 10, 21, 0, 11, 21, 0, 12, 21, 0, 13, 21, 0, 14, 21, 0, 15, 21, 0, 16, 21, 0, 17, 21, 0, 18, 21, 0, 19, 21, 0, 20, 21, 0, 21, 21, 0, 22, 21, 0, 23, 21, 0, 24, 21, 0, 25, 21, 0, 26, 21, 0, 27, 21, 0, 28, 21, 0, 29, 21, 0, 30, 21, 0, 31, 21, 0, 32, 21, 0, 33, 21, 0, 34, 21, 0, 35, 21, 0, 36, 21, 0, 37, 21, 0, 38, 21, 0, 39, 21, 0, 40, 21, 0, 41, 21, 0, 42, 21, 0, 43, 21, 0, 44, 21, 0, 45, 21, 0, 46, 21, 0, 47, 21, 0, 48, 21, 0, 49, 21, 0, 50, 21, 0, 51, 21, 0, 52, 21, 0, 53, 21, 0, 54, 21, 0, 55, 21, 0, 56, 21, 0, 57, 21, 0, 58, 21, 0, 59, 21, 0, 60, 21, 0, 61, 21, 0, 62, 21, 0, 63, 21, 0, 64, 21, 0, 65, 21, 0, 66, 21, 0, 67, 21, 0, 68, 21, 0, 69, 21, 0, 70, 21, 0, 71, 21, 0, 72, 21, 0, 73, 21, 0, 74, 21, 0, 75, 21, 0, 76, 21, 0, 77, 21, 0, 78, 21, 0, 79, 21, 0, 80, 21, 0, 81, 21, 0, 82, 21, 0, 83, 21, 0, 84, 21, 0, 85, 21, 0, 86, 21, 0, 87, 21, 0, 88, 21, 0, 89, 21, 0, 90, 21, 0, 91, 21, 0, 92, 21, 0, 93, 21, 0, 94, 21, 0, 95, 21, 0, 96, 21, 0, 97, 21, 0, 98, 21, 0, 99, 21, 0, 100, 21, 0, 101, 21, 0, 102, 21, 0, 103, 21, 0, 104, 21, 0, 105, 21, 0, 106, 21, 0, 107, 21, 0, 108, 21, 0, 109, 21, 0, 110, 21, 0, 111, 21, 0, 112, 21, 0, 113, 21, 0, 114, 21, 0, 115, 21, 0, 116, 21, 0, 117, 21, 0, 118, 21, 0, 119, 21, 0, 120, 21, 0, 121, 21, 0, 122, 21, 0, 123, 21, 0, 124, 21, 0, 125, 21, 0, 126, 21, 0, 127, 21, 0, 128, 21, 0, 129, 21, 0, 130, 21, 0, 131, 21, 0, 132, 21, 0, 133, 21, 0, 134, 21, 0, 135, 21, 0, 136, 21, 0, 137, 21, 0, 138, 21, 0, 139, 21, 0, 140, 21, 0, 141, 21, 0, 142, 21, 0, 143, 21, 0, 144, 21, 0, 145, 21, 0, 146, 21, 0, 147, 21, 0, 148, 21, 0, 149, 21, 0, 131063, 23, 0, 131064, 38, 0, 131065, 38, 0, 131066, 38, 0, 131067, 38, 0, 131068, 38, 0, 131069, 38, 0, 131070, 38, 0, 131071, 38, 0, 65536, 38, 0, 65537, 38, 0, 65538, 38, 0, 65539, 38, 0, 65540, 38, 0, 65541, 38, 0, 65542, 38, 0, 65543, 38, 0, 65544, 24, 0, 65550, 7, 0, 65551, 7, 0, 65552, 7, 0, 65553, 7, 0, 65554, 7, 0, 65555, 7, 0, 65556, 7, 0, 65557, 7, 0, 65558, 7, 0, 65559, 7, 0, 65560, 7, 0, 65561, 7, 0, 65562, 7, 0, 65563, 7, 0, 65564, 7, 0, 65565, 21, 0, 65566, 21, 0, 65567, 21, 0, 65568, 21, 0, 65569, 21, 0, 65570, 7, 0, 196599, 25, 0, 196600, 27, 0, 196601, 27, 0, 196602, 27, 0, 196603, 27, 0, 196604, 27, 0, 196605, 27, 0, 196606, 27, 0, 196607, 27, 0, 131072, 27, 0, 131073, 27, 0, 131074, 27, 0, 131075, 27, 0, 131076, 27, 0, 131077, 27, 0, 131078, 27, 0, 131079, 27, 0, 131080, 26, 0, 851998, 0, 0, 851999, 1, 0, 852000, 2, 0, 917513, 3, 0, 917514, 4, 0, 917515, 5, 0, 917534, 3, 0, 917535, 4, 0, 917536, 5, 0, 983049, 3, 0, 983050, 4, 0, 983051, 5, 0, 983070, 3, 0, 983071, 4, 0, 983072, 5, 0, 1048585, 3, 0, 1048586, 4, 0, 1048587, 5, 0, 1048606, 3, 0, 1048607, 4, 0, 1048608, 5, 0, 1114121, 3, 0, 1114122, 4, 0, 1114123, 5, 0, 1114142, 3, 0, 1114143, 4, 0, 1114144, 5, 0, 1179657, 3, 0, 1179658, 4, 0, 1179659, 5, 0, 1179678, 3, 0, 1179679, 4, 0, 1179680, 5, 0, 1245193, 3, 0, 1245194, 4, 0, 1245195, 5, 0, 1245214, 3, 0, 1245215, 4, 0, 1245216, 5, 0, 1310729, 3, 0, 1310730, 4, 0, 1310731, 5, 0, 1310750, 3, 0, 1310751, 4, 0, 1310752, 5, 0, 1376265, 3, 0, 1376266, 4, 0, 1376267, 5, 0, 1376286, 3, 0, 1376287, 4, 0, 1376288, 5, 0, 1441801, 3, 0, 1441802, 4, 0, 1441803, 5, 0, 1441822, 3, 0, 1441823, 4, 0, 1441824, 5, 0, 1507337, 3, 0, 1507338, 4, 0, 1507339, 5, 0, 1507358, 3, 0, 1507359, 4, 0, 1507360, 5, 0, 1572873, 6, 0, 1572874, 7, 0, 1572875, 8, 0, 1572894, 3, 0, 1572895, 4, 0, 1572896, 5, 0, 1638430, 3, 0, 1638431, 4, 0, 1638432, 5, 0, 1703966, 3, 0, 1703967, 4, 0, 1703968, 5, 0, 1769502, 3, 0, 1769503, 4, 0, 1769504, 5, 0, 1835038, 3, 0, 1835039, 4, 0, 1835040, 5, 0, 1900574, 3, 0, 1900575, 4, 0, 1900576, 5, 0, 2031558, 0, 0, 2031559, 1, 0, 2031560, 1, 0, 2031561, 1, 0, 2031562, 1, 0, 2031563, 1, 0, 2031564, 1, 0, 2031565, 1, 0, 2031566, 1, 0, 2031567, 1, 0, 2031568, 1, 0, 2031569, 1, 0, 2031570, 1, 0, 2031571, 1, 0, 2031572, 1, 0, 2031573, 1, 0, 2031574, 1, 0, 2031575, 1, 0, 2031576, 1, 0, 2031577, 1, 0, 2031578, 1, 0, 2031579, 1, 0, 2031580, 1, 0, 2031581, 1, 0, 2031582, 1, 0, 2031583, 1, 0, 2031584, 1, 0, 2031585, 1, 0, 2031586, 1, 0, 2031587, 1, 0, 2031588, 1, 0, 2031589, 1, 0, 2031590, 1, 0, 2031591, 1, 0, 2031592, 1, 0, 2031593, 1, 0, 2031594, 1, 0, 2031595, 1, 0, 2031596, 1, 0, 2031597, 1, 0, 2031598, 1, 0, 2031599, 1, 0, 2031600, 1, 0, 2031601, 1, 0, 2031602, 1, 0, 2031603, 1, 0, 2031604, 1, 0, 2031605, 1, 0, 2031606, 1, 0, 2031607, 1, 0, 2031608, 1, 0, 2031609, 1, 0, 2031610, 1, 0, 2031611, 1, 0, 2031612, 1, 0, 2031613, 1, 0, 2031614, 1, 0, 2031615, 2, 0, 1966110, 3, 0, 1966111, 4, 0, 1966112, 5, 0, 2097094, 3, 0, 2097095, 4, 0, 2097096, 4, 0, 2097097, 4, 0, 2097098, 4, 0, 2097099, 4, 0, 2097100, 4, 0, 2097101, 4, 0, 2097102, 4, 0, 2097103, 4, 0, 2097104, 4, 0, 2097105, 4, 0, 2097106, 4, 0, 2097107, 4, 0, 2097108, 4, 0, 2097109, 4, 0, 2097110, 4, 0, 2097111, 4, 0, 2097112, 4, 0, 2097113, 4, 0, 2097114, 4, 0, 2097115, 4, 0, 2097116, 4, 0, 2097117, 4, 0, 2097118, 4, 0, 2097119, 4, 0, 2097120, 4, 0, 2097121, 4, 0, 2097122, 4, 0, 2097123, 4, 0, 2097124, 4, 0, 2097125, 4, 0, 2097126, 4, 0, 2097127, 4, 0, 2097128, 4, 0, 2097129, 4, 0, 2097130, 4, 0, 2097131, 4, 0, 2097132, 4, 0, 2097133, 4, 0, 2097134, 4, 0, 2097135, 4, 0, 2097136, 4, 0, 2097137, 4, 0, 2097138, 4, 0, 2097139, 4, 0, 2097140, 4, 0, 2097141, 4, 0, 2097142, 4, 0, 2097143, 4, 0, 2097144, 4, 0, 2097145, 4, 0, 2097146, 4, 0, 2097147, 4, 0, 2097148, 4, 0, 2097149, 4, 0, 2097150, 4, 0, 2097151, 5, 0, 2031646, 3, 0, 2031647, 4, 0, 2031648, 5, 0, 2162630, 3, 0, 2162631, 4, 0, 2162632, 4, 0, 2162633, 4, 0, 2162634, 4, 0, 2162635, 4, 0, 2162636, 4, 0, 2162637, 4, 0, 2162638, 4, 0, 2162639, 4, 0, 2162640, 4, 0, 2162641, 4, 0, 2162642, 4, 0, 2162643, 4, 0, 2162644, 4, 0, 2162645, 4, 0, 2162646, 4, 0, 2162647, 4, 0, 2162648, 4, 0, 2162649, 4, 0, 2162650, 4, 0, 2162651, 4, 0, 2162652, 4, 0, 2162653, 4, 0, 2162654, 4, 0, 2162655, 4, 0, 2162656, 4, 0, 2162657, 4, 0, 2162658, 4, 0, 2162659, 4, 0, 2162660, 4, 0, 2162661, 4, 0, 2162662, 4, 0, 2162663, 4, 0, 2162664, 4, 0, 2162665, 4, 0, 2162666, 4, 0, 2162667, 4, 0, 2162668, 4, 0, 2162669, 4, 0, 2162670, 4, 0, 2162671, 4, 0, 2162672, 4, 0, 2162673, 4, 0, 2162674, 4, 0, 2162675, 4, 0, 2162676, 4, 0, 2162677, 4, 0, 2162678, 4, 0, 2162679, 4, 0, 2162680, 4, 0, 2162681, 4, 0, 2162682, 4, 0, 2162683, 4, 0, 2162684, 4, 0, 2162685, 4, 0, 2162686, 4, 0, 2162687, 5, 0, 2097182, 3, 0, 2097183, 4, 0, 2097184, 5, 0, 2228166, 3, 0, 2228167, 4, 0, 2228168, 4, 0, 2228169, 4, 0, 2228170, 4, 0, 2228171, 4, 0, 2228172, 4, 0, 2228173, 4, 0, 2228174, 4, 0, 2228175, 4, 0, 2228176, 4, 0, 2228177, 4, 0, 2228178, 4, 0, 2228179, 4, 0, 2228180, 4, 0, 2228181, 4, 0, 2228182, 4, 0, 2228183, 4, 0, 2228184, 4, 0, 2228185, 4, 0, 2228186, 4, 0, 2228187, 4, 0, 2228188, 4, 0, 2228189, 4, 0, 2228190, 4, 0, 2228191, 4, 0, 2228192, 4, 0, 2228193, 4, 0, 2228194, 4, 0, 2228195, 4, 0, 2228196, 4, 0, 2228197, 4, 0, 2228198, 4, 0, 2228199, 4, 0, 2228200, 4, 0, 2228201, 4, 0, 2228202, 4, 0, 2228203, 4, 0, 2228204, 4, 0, 2228205, 4, 0, 2228206, 4, 0, 2228207, 4, 0, 2228208, 4, 0, 2228209, 4, 0, 2228210, 4, 0, 2228211, 4, 0, 2228212, 4, 0, 2228213, 4, 0, 2228214, 4, 0, 2228215, 4, 0, 2228216, 4, 0, 2228217, 4, 0, 2228218, 4, 0, 2228219, 4, 0, 2228220, 4, 0, 2228221, 4, 0, 2228222, 4, 0, 2228223, 17, 0, 2162688, 1, 0, 2162689, 1, 0, 2162690, 1, 0, 2162691, 1, 0, 2162692, 1, 0, 2162693, 1, 0, 2162694, 1, 0, 2162695, 1, 0, 2162696, 1, 0, 2162697, 1, 0, 2162698, 1, 0, 2162699, 1, 0, 2162700, 1, 0, 2162701, 1, 0, 2162702, 1, 0, 2162703, 1, 0, 2162704, 1, 0, 2162705, 1, 0, 2162706, 1, 0, 2162707, 1, 0, 2162708, 1, 0, 2162709, 1, 0, 2162710, 1, 0, 2162711, 1, 0, 2162712, 1, 0, 2162713, 1, 0, 2162714, 1, 0, 2162715, 1, 0, 2162716, 1, 0, 2162717, 1, 0, 2162718, 18, 0, 2162719, 4, 0, 2162720, 5, 0, 2293702, 6, 0, 2293703, 7, 0, 2293704, 7, 0, 2293705, 7, 0, 2293706, 7, 0, 2293707, 7, 0, 2293708, 7, 0, 2293709, 7, 0, 2293710, 7, 0, 2293711, 7, 0, 2293712, 7, 0, 2293713, 7, 0, 2293714, 7, 0, 2293715, 7, 0, 2293716, 7, 0, 2293717, 7, 0, 2293718, 7, 0, 2293719, 7, 0, 2293720, 7, 0, 2293721, 7, 0, 2293722, 7, 0, 2293723, 7, 0, 2293724, 7, 0, 2293725, 7, 0, 2293726, 7, 0, 2293727, 7, 0, 2293728, 7, 0, 2293729, 7, 0, 2293730, 7, 0, 2293731, 7, 0, 2293732, 7, 0, 2293733, 7, 0, 2293734, 7, 0, 2293735, 7, 0, 2293736, 7, 0, 2293737, 7, 0, 2293738, 7, 0, 2293739, 7, 0, 2293740, 7, 0, 2293741, 7, 0, 2293742, 7, 0, 2293743, 7, 0, 2293744, 7, 0, 2293745, 7, 0, 2293746, 7, 0, 2293747, 7, 0, 2293748, 7, 0, 2293749, 7, 0, 2293750, 7, 0, 2293751, 7, 0, 2293752, 7, 0, 2293753, 7, 0, 2293754, 7, 0, 2293755, 7, 0, 2293756, 7, 0, 2293757, 7, 0, 2293758, 7, 0, 2293759, 7, 0, 2228224, 7, 0, 2228225, 7, 0, 2228226, 7, 0, 2228227, 7, 0, 2228228, 7, 0, 2228229, 7, 0, 2228230, 7, 0, 2228231, 7, 0, 2228232, 7, 0, 2228233, 7, 0, 2228234, 7, 0, 2228235, 7, 0, 2228236, 7, 0, 2228237, 7, 0, 2228238, 7, 0, 2228239, 7, 0, 2228240, 7, 0, 2228241, 7, 0, 2228242, 7, 0, 2228243, 7, 0, 2228244, 7, 0, 2228245, 7, 0, 2228246, 7, 0, 2228247, 7, 0, 2228248, 7, 0, 2228249, 7, 0, 2228250, 7, 0, 2228251, 7, 0, 2228252, 7, 0, 2228253, 7, 0, 2228254, 7, 0, 2228255, 7, 0, 2228256, 8, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -22.1 )

[node name="Goal" type="Area2D" parent="."]
position = Vector2( 162, 476 )
collision_layer = 4
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Goal"]
modulate = Color( 0.337255, 1, 0, 0.576471 )
scale = Vector2( 0.5, 0.2 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="DeathPlane" type="Area2D" parent="."]
position = Vector2( -802, 800 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathPlane"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Intro" type="CanvasLayer" parent="."]
layer = 5

[node name="Control" type="Control" parent="Intro"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 57.0
margin_bottom = -89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Intro/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.168627, 0.168627, 0.168627, 0.45098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Intro/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Rolling Hills"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Intro"]

[connection signal="body_entered" from="Goal" to="." method="_on_Goal_body_entered"]
[connection signal="body_exited" from="Goal" to="." method="_on_Goal_body_exited"]
[connection signal="body_entered" from="DeathPlane" to="." method="_on_DeathPlane_body_entered"]
